# Carla-RL-Pytorch

./: augmentation.py  debug_run.py  environment.py  main.py  pyproject.toml  reward.py  sac_carla.py  test.py  train.py  utils.py  world_config.py
config/: base.yaml  phase1.yaml  training.yaml
config/presets/: traffic.yaml  weathers.yaml
